Disable e.preventDefault because of scrollbar

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -74,6 +74,7 @@ body {
   font-size: 104px;
   line-height: 1;
   text-align: center;
+  margin: 45px 0;
 }
 
 /* Lists */
